plugins {
    id 'java'
}

allprojects {
    group = 'org.reujdon.jtp'
    version = '0.1.0'

    repositories {
        mavenLocal()
        mavenCentral()
    }
}

subprojects {
    apply plugin: 'java'

    java {
        sourceCompatibility = JavaVersion.VERSION_21
        targetCompatibility = JavaVersion.VERSION_21
    }

    dependencies {
        implementation("org.reujdon.async:Java-Async:1.0.0")

        implementation 'org.json:json:20240303'
        implementation 'org.slf4j:slf4j-api:2.0.17'
        implementation 'ch.qos.logback:logback-classic:1.4.7'

        // Test dependencies
        testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.2'
        testImplementation 'org.junit.jupiter:junit-jupiter:5.10.2'
        testImplementation 'org.junit.platform:junit-platform-suite:1.10.2'
    }

    test {
        useJUnitPlatform()
    }
}